# Rrdrand

./: Changelog  DESCRIPTION  README.md  cleanup  configure  configure.ac
man/: Rrdrand-package.Rd
src/: Rrdrand.c  config.h.in  registerDynamicSymbol.c
